# shazam

./: .gitignore  CMakeLists.txt  justfile  pyproject.toml
src/shazam/: __init__.py  __init__.pyi  core.py  internals.py  multifrb.C  multifrb.cc  multifrb.h  multihdr.C  multihdr.h  multitel.C  multitel.h  shazam.C  shazam.cc  shazam.h  utilities.C  utilities.cc  utilities.h
