[build-system]
requires = [
  "scikit-build-core >=0.4.3",
  "nanobind >=1.3.2",
  "setuptools >= 64",
  "setuptools_scm >= 8",
]

build-backend = "scikit_build_core.build"

[project]
name = "shazam"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.10"
description = "I/O for GMRT ring buffers, with the power of SHAZAM!"
authors = [{ name = "Ujjwal Panda", email = "ujjwalpanda97@gmail.com" }]

[project.urls]
Homepage = "https://github.com/astrogewgaw/shazam"

[tool.scikit-build]
wheel.py-api = "cp312"
minimum-version = "0.4"
build-dir = "build/{wheel_tag}"
sdist.include = ["src/shazam/_version.py"]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
write_to = "src/shazam/_version.py"
